# greekOCR

./: .dockerignore  .env.compose.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  alembic.ini  docker-bake.hcl  docker-compose.supabase.yml  docker-compose.yml  package-lock.json  pyproject.toml  requirements-platform.txt  requirements.txt  slurm-37753.out  todo.md  train.sh
annote/: CONTEXT.md  Dockerfile  README.md  docker-compose.yml
annote/backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
annote/backend/annotation/: __init__.py
annote/backend/annotation/api/: __init__.py  history.py  schemas.py
annote/backend/annotation/application/: __init__.py  export_service.py  history_service.py  transcription_pdf_service.py
annote/backend/annotation/infrastructure/: __init__.py
annote/backend/annote/: __init__.py  app.py  main.py  settings.py
annote/backend/annote/api/: health.py  pages.py
annote/backend/annote/schemas/: annotation.py  auto_segment.py  export.py  health.py  history.py  ocr.py  pages.py  warnings.py
annote/backend/annote/services/: annotation_history.py  annotation_merge.py  annotation_store.py  calamari_ocr.py  data_layout.py  export_service.py  export_state.py  fonts.py  image_export.py  kraken_binarize.py  kraken_segment.py  page_catalogue.py  page_image.py  page_import.py  page_lock.py  preview_service.py  segment_geometry.py  segment_refinement.py  segment_text.py  text_lines.py  transcription_pdf.py  transcription_pdf_share.py
annote/backend/annote/services/processing/: binarize.py  pipeline.py  polygon.py  rectify.py
annote/backend/app/: main.py  services.py
annote/backend/core/: .env.example  app.py  version.py
annote/backend/core/api/: root.py
annote/backend/core/schemas/: __init__.py  errors.py  root.py
annote/backend/core/settings/: __init__.py  _env.py  app.py  auth.py  job.py  ml.py  model.py
annote/backend/dev/: bootstrap.py
annote/backend/document/api/: documents.py  line_responses.py  media.py  media_responses.py  public.py  public_media.py  responses.py  schemas.py  transcription_responses.py
annote/backend/document/application/: document_service.py  segment_merge_service.py  transcribe_merge_service.py
annote/backend/document/domain/: access.py  line_transcription_text.py
annote/backend/document/infrastructure/: document_repository.py  media_store.py  orm_models.py
annote/backend/inference/api/: models.py  schemas.py
annote/backend/inference/application/: adapters.py  job_service.py  model_service.py
annote/backend/inference/infrastructure/: handlers.py  job_repository.py  kraken_adapter.py  model_repository.py  worker.py
annote/backend/jobs/api/: dependencies.py  internal_ml.py  jobs.py
annote/backend/jobs/application/: job_callback_service.py  job_service.py
annote/backend/jobs/infrastructure/: handlers.py  job_repository.py  orm_models.py  worker.py
annote/backend/ml/api/: schemas.py
annote/backend/ml/application/: model_service.py  ocr_prediction_service.py
annote/backend/ml/domain/: segment.py
annote/backend/ml/infrastructure/: kraken_adapter.py  ml_client.py  orm_models.py
annote/backend/project/api/: schemas.py
annote/backend/project/domain/: access.py
annote/backend/project/infrastructure/: project_repository.py
annote/backend/scripts/: export_openapi.py
annote/backend/tests/: conftest.py  test_annotation.py  test_annotation_hash.py  test_annotation_history.py  test_binarize.py  test_data_layout.py  test_export_service.py  test_export_state.py  test_health.py  test_kraken_segment.py  test_ocr_service.py  test_page_import.py  test_page_lock.py  test_pages.py  test_pairing_progress.py  test_polygon.py  test_preview_service.py  test_rectify.py  test_segment_refinement.py  test_segment_text.py  test_text_lines.py  test_transcription_api.py  test_transcription_pdf.py  test_transcription_pdf_share.py
annote/backend/tests/document/: conftest.py  test_line_transcription_text.py
annote/backend/tests/ml/: test_ml_client.py
annote/backend/tests/platform/: conftest.py  ml_test_helpers.py  test_access_public.py  test_annotation_history.py  test_async_ml_job_submit.py  test_auth.py  test_documents.py  test_export_approved_line_artifacts.py  test_inference_catalog.py  test_jobs.py  test_media_store.py  test_ml_job_callback.py  test_ocr_prediction.py  test_pairing_progress.py  test_projects.py  test_relocated_app_import.py  test_root.py  test_segment_pipeline.py  test_transcribe_pipeline.py  test_transcription_pdf_artifact.py
annote/backend/tests/unit/: test_line_geometry.py
annote/backend/users/api/: auth.py  schemas.py
annote/backend/users/application/: __init__.py  auth_service.py  jwt_tokens.py
backend/: .env.example
configs/: calamari_finetune.yaml  calamari_train.yaml  kraken_seg.yaml
designs/: README.md  index.html
docs/: README.md  architecture.md  calamari-vendored-architecture.md  codebase-audit.md  database-design.md  repository-cleanup-plan.md  repository-hygiene.md  todo.md
experiments/: calamari.ipyn_greek.ipynb
export 2/: Grec_1360_CONSTANTINUS_Harmenopulus_btv1b10721710m_6_18.txt  Grec_1360_CONSTANTINUS_Harmenopulus_btv1b10721710m_6_19.txt  Grec_1360_CONSTANTINUS_Harmenopulus_btv1b10721710m_6_2.txt  Grec_1360_CONSTANTINUS_Harmenopulus_btv1b10721710m_6_6.txt  Grec_1360_CONSTANTINUS_Harmenopulus_btv1b10721710m_7_2.txt  Grec_1360_CONSTANTINUS_Harmenopulus_btv1b10721710m_7_25.txt  Grec_1360_CONSTANTINUS_Harmenopulus_btv1b10721710m_7_28.txt  Grec_1360_CONSTANTINUS_Harmenopulus_btv1b10721710m_7_3.txt  Grec_1360_CONSTANTINUS_Harmenopulus_btv1b10721710m_7_36.txt  Grec_1360_CONSTANTINUS_Harmenopulus_btv1b10721710m_7_4.txt  Grec_1360_CONSTANTINUS_Harmenopulus_btv1b10721710m_7_40.txt  Grec_1360_CONSTANTINUS_Harmenopulus_btv1b10721710m_7_42.txt  Grec_1360_CONSTANTINUS_Harmenopulus_btv1b10721710m_7_44.txt  Grec_1360_CONSTANTINUS_Harmenopulus_btv1b10721710m_7_46.txt  Grec_1360_CONSTANTINUS_Harmenopulus_btv1b10721710m_7_48.txt  Grec_1360_CONSTANTINUS_Harmenopulus_btv1b10721710m_8_11.txt  (+5 more)
ml/: README.md  (+3 more)
(+1236 files in other folders)
