[project]
name = "greekocr"
version = "0.1.0"
description = "OCR and processing for Greek documents"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "opencv-python",
]

[project.optional-dependencies]
kraken = ["kraken>=7.0.2"]
train = [
    "accelerate>=1.13.0",
    "jiwer>=4.0.0",
    "pillow>=12.2.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=5.11.0",
]
calamari = ["calamari-ocr>=2.3.1"]

[dependency-groups]
# Inference service API (separate container; contracts importable from annote)
ml = [
    "fastapi",
    "httpx",
    "poethepoet",
    "pydantic",
    "pydantic-settings",
    "psycopg2-binary",
    "pyyaml",
    "sqlalchemy",
    "uvicorn[standard]",
]
# Annote platform API + Postgres + tests (deps only — repo is not installed as a package)
platform = [
    "alembic",
    "asyncpg",
    "bcrypt",
    "email-validator",
    "fastapi",
    "httpx",
    "numpy",
    "opencv-python-headless",
    "pillow",
    "poethepoet",
    "psycopg2-binary",
    "pydantic",
    "pydantic-settings",
    "PyJWT",
    "python-multipart",
    "reportlab",
    "sqlalchemy[asyncio]",
    "uvicorn[standard]",
    "pytest",
    "pytest-asyncio",
    "pypdf",
]

[tool.uv]
package = false
# ML extras pull incompatible stacks (e.g. kraken vs calamari); resolve separately.
conflicts = [
    [{ extra = "kraken" }, { extra = "calamari" }],
    [{ extra = "kraken" }, { extra = "train" }],
    [{ extra = "calamari" }, { extra = "train" }],
]

[tool.poe.tasks]
migrate = { shell = "cd ${ANNOTE_APP_ROOT:-annote} && alembic -c infrastructure/alembic.ini upgrade head" }
serve = { shell = "cd ${ANNOTE_APP_ROOT:-annote} && uvicorn backend.core.main:app --host 0.0.0.0 --port 8000 --workers 1" }
api = { sequence = ["migrate", "serve"] }
ml-api = "uvicorn ml.api.main:app --host 0.0.0.0 --port 8001 --workers 1"
ml-worker = "python -m ml.jobs.worker"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = ["annote", "."]
asyncio_mode = "auto"
testpaths = ["annote/backend/tests/platform", "ml/tests"]
markers = ["integration: requires Postgres"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["annote/backend", "ml"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
