[project]
name = "greekocr"
version = "0.1.0"
description = "OCR and processing for Greek documents"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy>=1.24.4,<2",
    "opencv-python>=4.8,<4.13",
]

[project.optional-dependencies]
kraken = ["kraken>=7.0.2"]
train = [
    "accelerate>=1.13.0",
    "jiwer>=4.0.0",
    "pillow>=12.3.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=5.11.0",
]

[dependency-groups]
dev = [
    "pip-audit>=2.10.1",
    "poethepoet>=0.48.0",
    "pre-commit>=4.6.0",
    "ruff>=0.15.21",
]
# Inference service API (separate container; contracts importable from nomicous)
inference = [
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "opencv-python-headless>=4.8,<4.13",
    "pillow>=12.3.0",
    # Floor clears CVE-2025-4565 / CVE-2026-0994; kraken/coremltools only need >=3.
    "protobuf>=5.29.6",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "psycopg2-binary>=2.9.10",
    "pyyaml>=6.0.2",
    "sqlalchemy>=2.0.36",
    "torch>=2.10.0",
    "uvicorn[standard]>=0.32.0",
    "kraken>=7.0.2",
    "huggingface-hub>=0.27.0",
]
load-testing = [
    "locust>=2.45.0",
]
# Inference Helper native packaging (PyInstaller freeze + system tray)
packaging = [
    "pyinstaller>=6.21.0",
    "pystray>=0.19.5",
    "pillow>=12.3.0",
]
# Nomicous platform API + Postgres + tests (deps only — repo is not installed as a package)
platform = [
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "bcrypt>=4.2.0",
    "email-validator>=2.2.0",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.6.0",
    "pydantic>=2.10.0",
    "PyJWT>=2.10.0",
    "PyYAML>=6.0",
    "python-multipart>=0.0.18",
    "sqlalchemy[asyncio]>=2.0.36",
    "uvicorn[standard]>=0.32.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pypdf>=6.13.2",
    "pillow>=12.3.0",
    "opencv-python-headless>=4.8,<4.13",
    "reportlab>=5.0.0",
    "supabase>=2.13.0",
]
# Production platform image (no test runner deps)
platform-prod = [
    "asyncpg>=0.30.0",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "bcrypt>=4.2.0",
    "email-validator>=2.2.0",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.6.0",
    "pydantic>=2.10.0",
    "PyJWT>=2.10.0",
    "PyYAML>=6.0",
    "python-multipart>=0.0.18",
    "sqlalchemy[asyncio]>=2.0.36",
    "pillow>=12.3.0",
    "reportlab>=5.0.0",
    "supabase>=2.13.0",
]

[tool.uv]
package = false
conflicts = [
    [{ extra = "kraken" }, { extra = "train" }],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-cpu", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.poe.tasks]
migrate = { shell = "cd ${NOMICOUS_APP_ROOT:-nomicous} && alembic -c infrastructure/alembic.ini upgrade head" }
serve = { shell = "cd ${NOMICOUS_APP_ROOT:-nomicous} && uvicorn backend.core.main:app --host 0.0.0.0 --port 8000 --workers 1" }
api = { sequence = ["migrate", "serve"] }
inference-api = "uvicorn inference.api.main:app --host 0.0.0.0 --port 8001 --workers 1"
inference-helper = "python -m inference.helper"
inference-worker = "python -m inference.jobs.worker"
test-fast = { shell = "uv run --group platform --group inference pytest tests/nomicous/unit" }
test-integration = { shell = "uv run --group platform --group inference pytest tests/nomicous -m integration" }
test-ml = { shell = "uv run --group platform --group inference pytest tests/nomicous -m ml" }
test-inference = { shell = "uv run --group platform --group inference pytest tests/inference" }
test-hf = { shell = "uv run --group inference pytest tests/hf" }

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = ["nomicous", "."]
asyncio_mode = "auto"
testpaths = ["tests/nomicous", "tests/inference", "tests/hf"]
filterwarnings = [
    "ignore:Using `httpx` with `starlette.testclient` is deprecated; install `httpx2` instead.:starlette.exceptions.StarletteDeprecationWarning",
    "ignore:`TorchVGSLModel\\.load_model` is deprecated.*:DeprecationWarning:kraken\\.lib\\.vgsl\\.model",
    "ignore:You will not be able to run predict\\(\\) on this Core ML model.*:RuntimeWarning:coremltools\\.models\\.model",
    "ignore:`blla\\.segment\\(\\)` is deprecated.*:DeprecationWarning:kraken\\.blla",
]
markers = [
    "integration: requires Postgres",
    "ml: runs real Kraken/Calamari weights (slow)",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["nomicous/backend", "inference"]

[tool.ruff.lint]
# Start with correctness failures across the existing mixed-age codebase.
# Formatting and style rules can be adopted incrementally without blocking CI.
select = ["F"]

[tool.ruff.format]
quote-style = "double"
