[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "../VERSION"
pattern = "^(?P<version>\\S+)"

[project]
name = "annote"
dynamic = ["version"]
description = "Annote production platform and manuscript annotation API"
readme = "../README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "bcrypt>=4.2.0",
    "email-validator>=2.2.0",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "numpy>=2.0.0",
    "opencv-python-headless>=4.10.0",
    "Pillow>=11.0.0",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.6.0",
    "pydantic>=2.10.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.18",
    "reportlab>=4.2.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "pytest-asyncio>=0.24.0", "pypdf>=5.0.0"]
kraken = ["kraken>=7.0"]
calamari = ["calamari-ocr>=2.0.0"]

[project.scripts]
annote = "annote.main:main"

[tool.hatch.build.targets.wheel]
packages = ["annote"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
